--- a/st.cmd.config
+++ b/st.cmd.config
@@ -2,54 +2,57 @@
 # startup file by doing:
 # < $(ADNED)/st.cmd.config
 # See example IOC.
+# Need to specify an environment variable for the asyn port, 
+# which is also prepended to port names for the plugins, like:
+# epicsEnvSet PORT "N"
 
-ADnEDConfig("NED", -1, -1, 1)
+ADnEDConfig("$(PORT)", -1, -1, 1)
 
-#asynSetTraceMask("NED",0,0x11)
+#asynSetTraceMask("$(PORT)",0,0x11)
 
 # Plugins for TOF data
 
 #ROI plugins to extract TOF data
-NDROIConfigure("DET1.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
+NDROIConfigure("$(PORT).DET1.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+NDROIConfigure("$(PORT).DET2.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+NDROIConfigure("$(PORT).DET3.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+NDROIConfigure("$(PORT).DET4.TOF", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of the TOF arrays
-NDStdArraysConfigure("DET1.TOF.ARR", 100, 0, "DET1.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("DET2.TOF.ARR", 100, 0, "DET2.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("DET3.TOF.ARR", 100, 0, "DET3.TOF", 0, -1, 0, 0)
-NDStdArraysConfigure("DET4.TOF.ARR", 100, 0, "DET4.TOF", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET1.TOF.ARR", 100, 0, "$(PORT).DET1.TOF", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET2.TOF.ARR", 100, 0, "$(PORT).DET2.TOF", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET3.TOF.ARR", 100, 0, "$(PORT).DET3.TOF", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET4.TOF.ARR", 100, 0, "$(PORT).DET4.TOF", 0, -1, 0, 0)
 
 #ROI plugins to do ROI/Stats on the TOF spectrums (configure 8 by default)
-NDROIStatConfigure("DET1.TOF.ROI", 100, 0, "DET1.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET2.TOF.ROI", 100, 0, "DET2.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET3.TOF.ROI", 100, 0, "DET3.TOF", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET4.TOF.ROI", 100, 0, "DET4.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET1.TOF.ROI", 100, 0, "$(PORT).DET1.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET2.TOF.ROI", 100, 0, "$(PORT).DET2.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET3.TOF.ROI", 100, 0, "$(PORT).DET3.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET4.TOF.ROI", 100, 0, "$(PORT).DET4.TOF", 0, 8, -1, -1, 0, 0)
 
-#asynSetTraceMask("DET1.TOF.ROI",0,0xFF)
-#asynSetTraceIOMask("DET1.TOF.ROI",0,0xFF)
+#asynSetTraceMask("$(PORT).DET1.TOF.ROI",0,0xFF)
+#asynSetTraceIOMask("$(PORT).DET1.TOF.ROI",0,0xFF)
 
 # Plugins for pixel data
 
 #ROI plugins to extract pixel event data
-ADnEDPixelROIConfig("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-ADnEDPixelROIConfig("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
-ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("$(PORT).DET1.XY", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("$(PORT).DET2.XY", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("$(PORT).DET3.XY", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
+ADnEDPixelROIConfig("$(PORT).DET4.XY", 100, 0, "$(PORT)", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of pixel event data
-NDStdArraysConfigure("DET1.XY.ARR", 100, 0, "DET1.XY", 0, -1, 0, 0)
-NDStdArraysConfigure("DET2.XY.ARR", 100, 0, "DET2.XY", 0, -1, 0, 0)
-NDStdArraysConfigure("DET3.XY.ARR", 100, 0, "DET3.XY", 0, -1, 0, 0)
-NDStdArraysConfigure("DET4.XY.ARR", 100, 0, "DET4.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET1.XY.ARR", 100, 0, "$(PORT).DET1.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET2.XY.ARR", 100, 0, "$(PORT).DET2.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET3.XY.ARR", 100, 0, "$(PORT).DET3.XY", 0, -1, 0, 0)
+NDStdArraysConfigure("$(PORT).DET4.XY.ARR", 100, 0, "$(PORT).DET4.XY", 0, -1, 0, 0)
 
 #ROI plugins to do ROI on the pixel event data (configure 8 by default)
 # NOTE: ROI0 is used for auto scaling on the CSS image.
-NDROIStatConfigure("DET1.XY.ROI", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET2.XY.ROI", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET3.XY.ROI", 100, 0, "DET3.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET4.XY.ROI", 100, 0, "DET4.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET1.XY.ROI", 100, 0, "$(PORT).DET1.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET2.XY.ROI", 100, 0, "$(PORT).DET2.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET3.XY.ROI", 100, 0, "$(PORT).DET3.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("$(PORT).DET4.XY.ROI", 100, 0, "$(PORT).DET4.XY", 0, 8, -1, -1, 0, 0)
 
 
 
