--- a/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
@@ -19,16 +19,16 @@ substitute "ADDR=0"
 substitute "NDARRAY_ADDR=0"
 
 # Pixel Initial ROI to convert from 1-D to 2-D NDArray
-substitute "R=ADnED:Det$(DET):XY:"
-substitute "PORT=DET$(DET).XY"
+substitute "R=$(ADNED)Det$(DET):XY:"
+substitute "PORT=$(ADNED_PORT).DET$(DET).XY"
 substitute "NDARRAY_PORT=$(ADNED_PORT)"
 include "NDPluginBase.template"
 include "ADnEDPixelROI.template"
 
 # Pixel X/Y Waveform
-substitute "R=ADnED:Det$(DET):XY:Array:"
-substitute "PORT=DET$(DET).XY.ARR"
-substitute "NDARRAY_PORT=DET$(DET).XY"
+substitute "R=$(ADNED)Det$(DET):XY:Array:"
+substitute "PORT=$(ADNED_PORT).DET$(DET).XY.ARR"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
 include "NDPluginBase.template"
 substitute "TYPE=Int32"
 substitute "FTVL=LONG"
@@ -36,9 +36,9 @@ include "NDStdArrays.template"
 
 # ROI and Stats
 
-substitute "R=ADnED:Det$(DET):XY:ROI:"
-substitute "PORT=DET$(DET).XY.ROI"
-substitute "NDARRAY_PORT=DET$(DET).XY"
+substitute "R=$(ADNED)Det$(DET):XY:ROI:"
+substitute "PORT=$(ADNED_PORT).DET$(DET).XY.ROI"
+substitute "NDARRAY_PORT=$(ADNED_PORT).DET$(DET).XY"
 include "NDPluginBase.template"
 include "NDROIStat8.template"
 
