--- a/ADnEDApp/Db/ADnEDPixelROI.template
+++ b/ADnEDApp/Db/ADnEDPixelROI.template
@@ -49,6 +49,7 @@ record(longout, "$(P)$(R)Min0")
    field(LOPR, "0")
    field(VAL,  "0")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Min0_RBV")
@@ -66,6 +67,7 @@ record(longout, "$(P)$(R)Min1")
    field(LOPR, "0")
    field(VAL,  "0")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Min1_RBV")
@@ -83,6 +85,7 @@ record(longout, "$(P)$(R)Min2")
    field(LOPR, "0")
    field(VAL,  "0")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Min2_RBV")
@@ -99,6 +102,7 @@ record(longout, "$(P)$(R)Size0")
    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM0_SIZE")
    field(VAL,  "1000000")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Size0_RBV")
@@ -115,6 +119,7 @@ record(longout, "$(P)$(R)Size1")
    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM1_SIZE")
    field(VAL,  "1000000")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Size1_RBV")
@@ -131,6 +136,7 @@ record(longout, "$(P)$(R)Size2")
    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PIXELROI_DIM2_SIZE")
    field(VAL,  "1000000")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(longin, "$(P)$(R)Size2_RBV")
@@ -213,6 +219,7 @@ record(mbbo, "$(P)$(R)DataTypeOut")
    field(EIVL, "-1")
    field(VAL,  "8")
    info(autosaveFields, "VAL")
+   field(ASG, "BEAMLINE")
 }
 
 record(mbbi, "$(P)$(R)DataTypeOut_RBV")
