--- a/ADnEDApp/Db/ADnEDChannel.template
+++ b/ADnEDApp/Db/ADnEDChannel.template
@@ -27,7 +27,8 @@ record(waveform, "$(P)$(R)PVName$(CHAN)")
     field(INP,  "@asyn($(PORT),$(CHAN),$(TIMEOUT))ADNED_PV_NAME")
     field(FTVL, "CHAR")
     field(NELM, "256")
-   info(autosaveFields, "VAL")
+    info(autosaveFields, "VAL")
+    field(ASG, "BEAMLINE")
 }
 
 # ///
